app/component/customize-search.scss
.offcanvas {
  width: 400px;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.offcanvas-mobile {
  width: 100%;
  height: 100%;
  background: #f4f4f5;
  .settings-option-container {
    padding: 0.5em 1em 0 1em;
    h1 {
      text-align: center;
      padding: 1em 0.5em 1em 0.5em;
      font-size: $font-size-large;
    }
    .mode-option-container {
      .mode-icon {
        margin-left: 0px
      }
    }
    .settings-dropdown-wrapper {
      .settings-dropdown-label {
        padding: 0px;
      }
    }
    .settings-header {
      padding-left: 0px;
    }
    .avoid-transfers-container {
      padding: 0px;
      height: 3.5em;
    }
    .accessibility-container {
      padding: 0px;
      height: 3.5em;
    }
  }
  .customize-search {
    box-shadow: none;
    .close-offcanvas {
      top: 1.5em;
      left: 0.9375em;
      border: solid 1px #dddddd;
      height: 40px;
      width: 40px;
      border-radius: 50%;
      padding-top: 4px;
      padding-right: 2px;
      .close-icon {
        width: 1.3em;
        height: 1.3em;
      }
    }
    .toggle-container {
      .settings-header {
        padding-top: 0.5em;
      }
      span {
        padding-top: 0.5em;
      }
    }
  }
}

.settings-dropdown-wrapper {
  line-height: 1em;
  .settings-dropdown li {
    line-height: 2em;
  }
  .fake-select-arrow {
    height: 0.5em;
  }
}
.customize-search > .settings-option-container {
  border-bottom: 1px solid #e3e3e3;
}

.desktop {
  .customize-search {
    .scrollable-content-wrapper {
      overflow-y: scroll;
      overflow-x: hidden;
      display: flex;
      flex-basis: 0px;
      flex-direction: column;
      flex-grow: 1;
      flex-shrink: 0;
      }
  }
}
.customize-search {
  height: 100%;
  display: flex;
  flex-direction: column;
  background: #ffffff;
  color: $black;
  line-height: 35px;
  position: relative;
  box-shadow: inset 5px 0px 5px 0px #f4f4f5;

  .close-offcanvas {
    position: absolute;
    background-color: transparent;
    color: $primary-color;
    right: 1em;
    top: 1em;
    padding: 0;
  }

  .react-autosuggest__suggestions-container--open {
    position: absolute;
    width: 100%;
    top: 4rem;
    z-index: index($zindex, autosuggest-suggestion-container)
  }

  .toggle-container {
    .settings-header {
      padding-top: 0.5em;
      width: 100%;
    }
    span {
      padding-top: 1em;
      width: 100%;
    }
    .icon-container {
      width: auto;
      margin: 0 1em 0 0;
    }
  }
  .mode-option-block.citybike-network-container:nth-child(2) {
    border-bottom: 1px solid #e3e3e3;
  }
  .mode-option-block.citybike-network-container {
    margin-bottom: 0.75em;
    .option-toggle-container {
      width: 100%;

      .toggle {
        top: 0px;
      }
    }
    .icon-container {
      margin-right: 0.5em;
    }
  }
}

.settings-option-container {
  padding: 0.5em 1em 0 1em;
  border-bottom: 10px solid #f4f4f5;
  font-weight: 500;

  & + .settings-option-container {
    padding-bottom: 0.5em;
  }

  h1 {
    text-transform: none;
    font-size: $font-size-xlarge;
    letter-spacing: -0.6pt;
    font-weight: 500;
    font-family: $font-family;
    padding: 1.5em 0.5em 0.5em 0.5em;
  }

  .option-checkbox-container > span {
    margin-top: -0.4em;
  }

  .mode-option-container:last-of-type {
    border: none;
  }
}
.settings-option-container:nth-of-type(2) {
  border-bottom: 1px solid #dddddd;
}

.transport-mode-header {
  h1 {
    text-transform: uppercase;
    letter-spacing: -0.6pt;
    font-size: $font-size-normal;
    font-weight: $font-weight-bold;
    font-family: $font-family;
  }
}

.settings-header {
  font-size: $font-size-normal;
  color: $gray;
  font-weight: normal;
  padding-left: 1em;
}

.settings-header-citybike {
  padding-left: 0;
}

.mode-option-container {
  display: flex;
  border-bottom: 1px solid #e3e3e3;
  font-size: $font-size-small;

  .icon-container {
    width: auto;
  }

  .option-checkbox {
    margin-top: 1em;
  }

  .mode-option-block {
    width: 100%;
    height: 3.5em;
    margin-bottom: 0.1em;
    display: flex;
    cursor: pointer;

    span {
      color: #000;
    }
    .icon {
      font-size: 2.5em;
      margin-top: 0.2em;
    }

    .mode-icon {
      margin-left: 1em;
      margin-right: 1em;
      .subicon-caution .icon {
        width: 16px;
        height: 16px;
        margin-left: 0.1em;
        margin-top: -0.8em;
      }
    }
    .mode-name {
      display: flex;
      flex-direction: column;
      margin-top: 1.2em;
      width:100%;
      span {
        line-height: 1.1em;
      }
      .span-bike-not-allowed {
        font-size: $font-size-xxsmall;
      }
    }

    &.subway svg.SUBWAY-icon {
      fill: $metro-color;
    }
  }
}

.preferred-routes-input-container {
  .react-autosuggest__container input {
    border-radius: 4px;
    height: 3.5em;
    font-size: 1rem;
    font-weight: 700;
    border: 1px solid #dddddd;
    cursor: pointer;
  }
  button.noborder.clear-input {
    background-color: $primary-color;
    height: 4em;
    padding-right: 1.5em;
    padding-left: 1.5em;
    .icon {
      color: #fff;
    }
  }
}

.preferred-routes-list {
  color: rgb(51, 51, 51);

  .route-name {
    display: flex;
    margin-top: 0.8em;
    button {
      border-radius: 50%;
      background: white;
      border: 1px solid rgb(221, 221, 221);
      padding: 0;
      height: 17px;
      width: 17px;
      line-height: 0;
      margin-right: 0.5em;
      margin-bottom: 0;
      .icon {
        color: #007ac9;
        font-size: 0.4em;
      }
      &:hover {
        border: 1px solid #007ac9;
      }
    }
    .route-prefer-details {
      line-height: 1em;
      display: flex;
      :first-child {
        margin-right: 0.3em;
      }
    }
  }
}

.route-preferences-container h1 {
  text-transform: uppercase;
  font-size: $font-size-normal;
}

.save-controls-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-content: space-between;
  .save-settings {
    margin-right: 1.5em;
  }
  button {
    border-radius: 100px;
    span {
      color: $white;
    }
    &.settings-loadbutton {
      span {
        color: $link-color;
      }
    }
  }
  .reset-settings {
    background-color: transparent;
    span {
      color: $link-color;
    }
  }
}

.option-container {
  h1 {
    text-transform: none;
    font-size: $font-size-normal;
    letter-spacing: -0.6pt;
    font-weight: $font-weight-bold;
    font-family: $font-family;
  }
  h4 {
    display: none;
  }
  .select-container {
    position: relative;

    .icon.fake-select-arrow {
      position: absolute;
      right: 0.7em;
      top: 0.7em;
      font-size: 1.5em;
      color: $primary-color;
      pointer-events: none;
    }

    select {
      border-radius: 4px;
      height: 3.5em;
      font-size: $font-size-normal;
      font-weight: $font-weight-bold;
      border: 1px solid rgb(221, 221, 221);
      cursor: pointer;

      &:hover {
        border: solid 1px #007ac9;
      }
    }
  }
}

.avoid-transfers-container {
  padding: 0 0 0 1em;
  height: 3.5em;
  .settings-header {
    padding-left: 0px;
  }
}

.accessibility-container {
  padding: 0 0 0 1em;
  height: 3.5em;
}

